// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip should render correctly 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r0:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
  >
    Hover me
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly without text 1`] = `
<DocumentFragment>
  Hover me
</DocumentFragment>
`;
